--- a/TODO
+++ b/TODO
@@ -7,8 +7,7 @@ TODO:
     gating/idling?) and then calls Ack/Confirm etc with the message sequence?
 
 - Wireup DSL
-- Rewrite code test first
-- Verify "diamond" consumer pattern (with tests)
+- Rewrite all code test first (including diamond pattern)
 - Benchmark code (go test -bench=.) (with GOMAXPROCS=2 if env GOMAXPROCS=1)
 - MultiWriter (and appropriate hooks into Barrier)
 - Squeeze little bits of performance here and there by trying a few different things
